--- a/Cargo.toml
+++ b/Cargo.toml
@@ -2,11 +2,14 @@
 name = "tree-sitter-toml-ng"
 description = "TOML grammar for tree-sitter"
 version = "0.7.0"
+authors = [
+  "Ika <ikatyang@gmail.com>",
+  "Amaan Qureshi <amaanq12@gmail.com>"
+]
 license = "MIT"
 readme = "README.md"
 keywords = ["incremental", "parsing", "tree-sitter", "toml"]
-categories = ["parsing", "text-editors"]
-authors = ["Ika <ikatyang@gmail.com>", "Amaan Qureshi <amaanq12@gmail.com>"]
+categories = ["parser-implementations", "parsing", "text-editors"]
 repository = "https://github.com/tree-sitter-grammars/tree-sitter-toml"
 edition = "2021"
 autoexamples = false
@@ -18,6 +21,7 @@ include = [
   "queries/*",
   "src/*",
   "tree-sitter.json",
+  "LICENSE",
 ]
 
 [lib]
@@ -30,4 +34,4 @@ tree-sitter-language = "0.1"
 cc = "1.2"
 
 [dev-dependencies]
-tree-sitter = "0.24"
+tree-sitter = "0.25.6"
